[project]
name = "chatterboxtts"
description = "ComfyUI-ChatterboxTTS is now available in ComfyUI, Chatterbox TTS is the first production-grade open-source TTS model."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy~=1.26.0", "resampy==0.4.3", "librosa==0.10.0", "s3tokenizer", "torch==2.6.0", "torchaudio==2.6.0", "transformers==4.46.3", "diffusers==0.29.0", "resemble-perth==1.0.1", "omegaconf==2.3.0", "conformer==0.3.2", "chatterbox-tts"]

[project.urls]
Repository = "https://github.com/Yuan-ManX/ComfyUI-ChatterboxTTS"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ChatterboxTTS"
Icon = ""
includes = []
